--- a/styles/wp-version-specific/_wp-6-1.scss
+++ b/styles/wp-version-specific/_wp-6-1.scss
@@ -14,9 +14,9 @@ body.branch-6-1 {
 	.components-input-control__label {
 		display: flex;
 		align-items: center;
-		gap: 0.5rem;
+		gap: var(--es-gutenberg-base-control-label-gap, 0.5rem);
 
-		margin: 0 0 0.5rem;
+		margin: var(--es-gutenberg-base-control-label-margin, 0 0 0.5rem);
 		width: 100%;
 
 		svg {
